--- a/assets/typography.css
+++ b/assets/typography.css
@@ -5,7 +5,7 @@ body {
 }
 
 #_dash-app-content {
-	background: linear-gradient(217deg, #d87700b5, #760014ab, #47002bbb,#18005fc8, #001c47), url("background.png") ;
+	background: linear-gradient(217deg, #d87700b5, #760014ab, #47002bbb,#18005fc8, #001c47), url("back.png") ;
 }
 
 #main {
